# opencode-memory-store

./: .gitignore  FLOW.md  README.md  pyproject.toml  test_memory_store.py  test_recall.py
plugin/: index.js  package-lock.json  package.json
scripts/: ingest_project.py  setup.ps1
src/opencode_memory_store/: cli.py  store.py
