[project]
name = "opencode-memory-store"
version = "0.1.0"
description = "Async SQL memory store for OpenCode"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
