[project]
name = "opencode-memory-store"
version = "0.1.0"
description = "SQLite + FTS5 memory store for OpenCode — persist context across sessions"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
opencode-memory-store = "opencode_memory_store.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
